<resources>
    <string name="app_name">ClothyShop</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="_4_5">4.5</string>
    <string name="search_products">Search Products</string>
    <string name="products">Products</string>
    <string name="home_decoration">Home Decor</string>
    <string name="groceries">Groceries</string>
    <string name="skincare">Skincare</string>
    <string name="fragrances">Fragrances</string>
    <string name="laptops">Laptops</string>
    <string name="smartphones">Mobile</string>
    <string name="clothy_shop">ClothyShop</string>


    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="abdul_razzaq">Abdul Razzaq</string>
    <string name="abdulrazzaqd_gmail_com">abdulrazzaqd@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="clothify">Clothify</string>
    <string name="mobiles">Mobiles</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="martin_alex">Martin Alex</string>
    <string name="martin_gmail">martingalex@gmail</string>
    <string name="_65445321565">+65445321565</string>
    <string name="todo">TODO</string>
    <string name="profile_tv">Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="privacy">Privacy</string>
    <string name="my_address">My Address</string>
    <string name="my_orders">My Orders</string>
    <string name="item">Item</string>
    <string name="product_details">Product Details</string>
    <string name="_120">$120</string>
    <string name="brand">Brand</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="discount_12">12% Off</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="total_price">Total Price</string>
    <string name="place_order">Place Order</string>
    <string name="discountedprice">DiscPrice</string>
    <string name="a_place_where_we_meet_your_expectations">A place where we meet your expectations…</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="or_create_using">Or Create using</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_to_clothify">Welcome to Clothify…</string>
    <string name="logout">Logout</string>
</resources>